--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -20,7 +24,8 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    background:rgb(246, 246, 246)
+    /* color: white; */
+    /* background: black; */
   }
 }
